Reports/server/Experiment_Data_Wed_Nov_15_14:46:07_UTC_2017/Performance_Results/file-input-output/javascript.txt
/home/sgeorgiou/GitHub/Rosetta_Code_Research_MSR/Scripts/server/file-input-output/javascript/file-input-output.js:5
            if (err) throw err;
                     ^

Error: EMFILE: too many open files, open '../input.txt'
    at Error (native)

real	0m4.575s
user	0m4.437s
sys	0m2.408s
/home/sgeorgiou/GitHub/Rosetta_Code_Research_MSR/Scripts/server/file-input-output/javascript/output.txt:1
(function (exports, require, module, __filename, __dirname) { The Republic By Plato
                                                                  ^^^^^^^^

SyntaxError: Unexpected identifier
    at createScript (vm.js:56:10)
    at Object.runInThisContext (vm.js:97:10)
    at Module._compile (module.js:542:28)
    at Object.Module._extensions..js (module.js:579:10)
    at Module.load (module.js:487:32)
    at tryModuleLoad (module.js:446:12)
    at Function.Module._load (module.js:438:3)
    at Module.runMain (module.js:604:10)
    at run (bootstrap_node.js:383:7)
    at startup (bootstrap_node.js:149:9)

real	0m0.080s
user	0m0.048s
sys	0m0.003s
